Basic Layout Done

--- a/index.html
+++ b/index.html
@@ -1,9 +1,91 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Karthik Hariharan</title>
-
+    <title>Karthik Hariharan</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+    <style type="text/css">
+        .cir {
+            width: 150px;
+            height: 150px;
+            background: #fff;
+            border-radius: 75px;
+            padding-top: 65px;
+            text-align: center;
+            transition: box-shadow 0.4s;
+            box-shadow: 0 0 1px #d0d0d0;
+        }
+        .cir:hover {
+            transition: box-shadow 0.4s;
+            box-shadow: 0 0 10px black;
+        }
+    </style>
 </head>
 <body>
-<h1>Karthik Hariharan</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Karthik Hariharan</h1>
+                <img src="/assets/img/pic.jpg" />
+            </div>
+            <div class="col-md-8">
+                <br>
+                <div class="row">
+                    <div class="col-md-offset-6">
+                        <h3>Code</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-offset4 col-md-3">
+                            <a href="https://github.com/realslimkarthik/js-terminal" target="_blank">
+                            <div class="cir">
+                                JS-Terminal
+                            </div>
+                            </a>
+                        </div>
+                        <div class="col-md-offset2 col-md-3">
+                            <a href="https://github.com/realslimkarthik/local-python-docs" target="_blank">
+                            <div class="cir">
+                                Local Python Docs
+                            </div>
+                            </a>
+                        </div>
+                        <div class="col-md-offset2 col-md-3">
+                            <a href="https://github.com/realslimkarthik/MoM_Predictor" target="_blank">
+                            <div class="cir">
+                                MoM Predictor
+                            </div>
+                            </a>
+                        </div>
+                        <div class="col-md-offset2 col-md-3">
+                            <a href="https://github.com/realslimkarthik/proxy_server" target="_blank">
+                            <div class="cir">
+                                Proxy Server
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-offset2 col-md-3">
+                            <a href="https://github.com/makkarlabs/RemotePi" target="_blank">
+                            <div class="cir">
+                                Remote Pi
+                            </div>
+                            </a>
+                        </div>
+                        <div class="col-md-offset2 col-md-3">
+                            <a href="https://github.com/makkarlabs/bbmonkey" target="_blank">
+                            <div class="cir">
+                                Browse With Me
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            
+        </div>
+    </div>
 </body>
 </html>
