--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Projects</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
                     <li><a class="navbar-brand" href="#">Karthik Hariharan</a></li>
                     <li><a href="#">Theatre</a></li>
                   </ul>
