--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             transition: box-shadow 0.4s;
             box-shadow: 0 0 10px black;
         }
+        .picFormat {
+            width: 100%;
+            height: 30%;
+        }
     </style>
 </head>
 <body>
@@ -37,80 +41,17 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a class="navbar-brand" href="#">Karthik Hariharan</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a class="navbar-brand" href="/">Karthik Hariharan</a></li>
                     <li><a href="#">Theatre</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
             </nav>
     <div class="container">
-        <div class="row">
-            
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <h1>Karthik Hariharan</h1>
-                <img src="assets/img/pic.jpg" />
-            </div>
-            <div class="col-md-8">
-                <br>
-                <div class="row">
-                    <div class="col-md-offset-6">
-                        <h3>Code</h3>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-offset4 col-md-3">
-                            <a href="https://github.com/realslimkarthik/js-terminal" target="_blank">
-                            <div class="cir">
-                                JS-Terminal
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-offset2 col-md-3">
-                            <a href="https://github.com/realslimkarthik/local-python-docs" target="_blank">
-                            <div class="cir">
-                                Local Python Docs
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-offset2 col-md-3">
-                            <a href="https://github.com/realslimkarthik/MoM_Predictor" target="_blank">
-                            <div class="cir">
-                                MoM Predictor
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-offset2 col-md-3">
-                            <a href="https://github.com/realslimkarthik/proxy_server" target="_blank">
-                            <div class="cir">
-                                Proxy Server
-                            </div>
-                            </a>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-offset2 col-md-3">
-                            <a href="https://github.com/makkarlabs/RemotePi" target="_blank">
-                            <div class="cir">
-                                Remote Pi
-                            </div>
-                            </a>
-                        </div>
-                        <div class="col-md-offset2 col-md-3">
-                            <a href="https://github.com/makkarlabs/bbmonkey" target="_blank">
-                            <div class="cir">
-                                Browse With Me
-                            </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            
+        <div class="jumbotron">
+            <h1>Karthik Hariharan</h1>
+            <p>Actor. Chelsea Fan. Pythonista. Web Developer.</p>
         </div>
     </div>
     <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js"></script>
