Some touch ups and added blog link

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                   <ul class="nav navbar-nav">
                     <li><a href="#">Projects</a></li>
                     <li><a class="navbar-brand" href="/">Karthik Hariharan</a></li>
-                    <li><a href="#">Theatre</a></li>
+                    <li><a href="http://scriptsnscripts.blogspot.com/">Blog</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
@@ -100,6 +100,14 @@ the built in chat room.</h4>
                     <li>Twython for obtaining Tweets to perform sentiment analysis.</li>
                     <li>jQuery for frontend interaction.</li>
                 </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-offset4">
+                <a href="https://github.com/realslimkarthik/PL-Results" target="_blank">
+                    <h3>PL Results Scraper</h3>
+                </a>
+                <h4>A Scrapy spider that scrapes every result of the Barclay's Premier League from its inception in 1992 and stores it in a MongoDB collection. Uses PyMongo for the interaction with the MongoDB database. I've planned a visualization with all this data which I'm currently working on.</h4>
             </div>
         </div>
         <!-- <div class="row">
