--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <ul class="nav navbar-nav">
                     <li><a href="/projects">Projects</a></li>
                     <li><a class="navbar-brand" href="/">Karthik Hariharan</a></li>
-                    <li><a href="#">Theatre</a></li>
+                    <li><a href="http://scriptsnscripts.blogspot.com/">Blog</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
